# speech_commands

./: .packages  LICENSE  README.md  pubspec.yaml
.dart_tool/: package_config.json
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/org/demen/speech_commands/: SpeechCommandsPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/org/demen/speech_commands_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  recognize_commands.dart
example/test/: widget_test.dart
ios/: speech_commands.podspec
ios/Classes/: SpeechCommandsPlugin.h  SpeechCommandsPlugin.m  audio_engine.cpp  audio_engine.h  native_audio.cpp  native_tflite.cpp
lib/: speech_commands.dart
test/: speech_commands_test.dart
